--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,6 +32,14 @@
               %li= link_to "Link 1", "/path1"
               %li= link_to "Link 2", "/path2"
               %li= link_to "Link 3", "/path3"
+              %li
+                - if user_signed_in?
+                  = link_to current_user.name, "#"
+                - else
+                  = link_to "Sign in with GitHub", user_omniauth_authorize_path(:github)
+              %li
+                - if user_signed_in?
+                  = link_to "Sign out", destroy_user_session_path
 
     .container
 
