Make user urls pretty very easily

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") ScrapingPlatform
+          = link_to "ScrapingPlatform", root_path, class: "brand"
           .container.nav-collapse
             %ul.nav
               %li= link_to "Link 1", "/path1"
