--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -10,7 +10,8 @@
 = semantic_form_for @scraper do |f|
   = f.inputs do
     = f.input :github_id, as: :select, collection: @repos.map{|r| [r.name, r.id]}, label: "GitHub Repository", include_blank: false
-  = f.actions
+  = f.actions do
+    = f.action :submit, label: "Add Scraper"
 
 %ul
   - @repos.each do |repo|
