--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -9,7 +9,7 @@
 
 = semantic_form_for @scraper do |f|
   = f.inputs do
-    = f.input :github_id, as: :select, collection: @repos.map{|r| [r.name, r.id]}, label: "GitHub Repository", include_blank: false
+    = f.input :name, as: :select, collection: @repos.map{|r| r.name}, label: "GitHub Repository", include_blank: false
   = f.actions do
     = f.action :submit, label: "Add Scraper"
 
