--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -1,3 +1,14 @@
 %h1 Hello!
 
 %p This page will become the landing page for the scraping platform. Yes!
+
+%h2 All Users
+
+%ul
+  - User.all.each do |user|
+    %li= link_to user.name, user
+%h2 All Scrapers
+
+%ul
+  - Scraper.all.each do |scraper|
+    %li= link_to scraper.full_name, scraper
