Make add scraper a button

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,4 +14,4 @@
       = scraper.description
 
 - if @user == current_user
-  = link_to "Add scraper", new_scraper_path
+  = link_to "Add scraper", new_scraper_path, class: "btn"
