Remove stuff from the ui that we aren't using

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,10 +28,7 @@
             %span.icon-bar
           = link_to "ScrapingPlatform", root_path, class: "brand"
           .container.nav-collapse
-            %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+            %ul.nav.pull-right
               %li
                 - if user_signed_in?
                   = link_to current_user.name, current_user
@@ -44,17 +41,9 @@
     .container
 
       .row
-        .span9
+        .span12
           = bootstrap_flash
           = yield
-        .span3
-          .well.sidebar-nav
-            %h3 Sidebar
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
     
       %footer
         %p &copy; Company 2013
