--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -1,4 +1,9 @@
-%h1= @scraper.name
+%h1
+  = link_to @scraper.owner.to_param, @scraper.owner
+  \/
+  = link_to @scraper.name, @scraper
+
+%h4= @scraper.description
 
 %p This is where all the information for this scraper and the resulting data will be shown
 
