Update a little bit of wording

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -5,7 +5,10 @@
 %p
   For the time being scrapers are restricted to using Ruby. They need to have a file in the root
   directory called "scraper.rb" and they should create an sqlite database in the current working
-  directory. Other than that you can pretty much do whatever you want.
+  directory called "scraperwiki.sqlite". The code needs to live in the master branch of the repository.
+
+%p
+  Other than this you can pretty much do whatever you want.
 
 -# TODO Don't show repos that we've already added
 
