Make the table layout a little less ugly

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the scrapers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table.scraper-data {
+  table-layout: fixed;
+  td, th {
+    word-wrap: break-word;
+  }
+}
