Show it's by OAF

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,4 +49,6 @@
           = yield
     
       %footer
-        %p &copy; Company 2013
+        %p
+          &copy; OpenAustralia Foundation 2013.
+          = link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
