--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -16,6 +16,7 @@
 
 - if @rows
   %h2 Data
+  = link_to "Download table (as CSV)", scraper_data_path(@scraper, :format => :csv)
   %p (First 10 rows)
   .table-responsive
     %table.table.table-striped.table-bordered.table-condensed.scraper-data
