--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -7,8 +7,11 @@
 
 = link_to "Go to GitHub", @scraper.github_url
 
+- if @scraper.running?
+  %p The scraper is <strong>running</strong>
+
 - if @scraper.owned_by?(current_user)
-  = button_to "Run it!", run_scraper_path(@scraper), class: "btn btn-info"
+  = button_to "Run it!", run_scraper_path(@scraper), class: (@scraper.running? ? "btn btn-info disabled" : "btn btn-info")
 
 - if @scraper.last_run
   %h2 Last Run
