--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -8,7 +8,10 @@
 = link_to "Go to GitHub", @scraper.github_url
 
 - if @scraper.running?
-  %p The scraper is <strong>running</strong>
+  %p
+    The scraper is <strong>running</strong>. It was started
+    = time_ago_in_words(@scraper.started_at)
+    ago. (For the time being you will need to refresh this page to update this</quiet>)
 
 - if @scraper.owned_by?(current_user)
   = button_to "Run it!", run_scraper_path(@scraper), class: (@scraper.running? ? "btn btn-info disabled" : "btn btn-info")
