--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -11,7 +11,7 @@
     The scraper is <strong>running</strong>. It was started
     = time_ago_in_words(@scraper.started_at)
     ago. (For the time being you will need to refresh this page to update this</quiet>)
-- elsif @scraper.last_run
+- elsif @scraper.last_run_completed
   - if @scraper.last_run_successful?
     .alert.alert-success
       Last run completed successfully
@@ -30,11 +30,11 @@
 - if @scraper.owned_by?(current_user)
   = button_to "Run it!", run_scraper_path(@scraper), class: (@scraper.running? ? "btn btn-info disabled" : "btn btn-info")
 
-- if @scraper.last_run && !@scraper.last_run.log_lines.empty?
+- if @scraper.last_run_completed && !@scraper.last_run_completed.log_lines.empty?
   %h3 Console output
   %p Hint: Keep this to a minimum during normal use (so that things remain readable)
   %pre
-    - @scraper.last_run.log_lines.order(:number).each do |line|
+    - @scraper.last_run_completed.log_lines.order(:number).each do |line|
       -# TODO Highlight stderr differently
       %span{:class => line.stream}= line.text
 
