--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -60,5 +60,7 @@
 - if @scraper.owned_by?(current_user)
   %h2 Here be dragons!
 
+  = button_to "Clear database", clear_scraper_path(@scraper), {class: "btn btn-danger", confirm: "All your data will be gone!"}
+
   = button_to "Delete scraper", @scraper, {method: :delete, class: "btn btn-danger", confirm: "Delete #{@scraper.full_name}?"}
-  %p This can't be undone  
+  %p These can't be undone  
