Fix displayed url when not in development

--- a/app/views/static/api.html.haml
+++ b/app/views/static/api.html.haml
@@ -3,7 +3,7 @@
 %p The API allows you to programatically retrieve data from any public scraper using an SQL query. It's all pretty easy.
 
 %pre
-  %code http://127.0.0.1:3000/<em>[scraper]</em>/data.json?query=<em>[sql]</em>
+  %code #{root_url}<em>[scraper]</em>/data.json?query=<em>[sql]</em>
 
 %h2 parameters
 
