Show link to github issues in footer. Fixes #49

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,4 +51,6 @@
       %footer
         %p
           &copy; OpenAustralia Foundation 2013.
-          = link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
+          %ul
+            %li= link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
+            %li= link_to "Report an issue or suggest a feature", "https://github.com/mlandauer/scraper-platform/issues?state=open" 
