--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -12,7 +12,7 @@
 
 = semantic_form_for @scraper do |f|
   = f.inputs do
-    = f.input :name, as: :select, collection: @repos.map{|r| r.name}, label: "GitHub Repository", include_blank: false
+    = f.input :name, as: :radio, collection: @repos.map{|r| ["<strong>#{r.name}</strong> &mdash; #{r.description}".html_safe, r.name]}, label: "GitHub Repository", include_blank: false
   = f.actions do
     = f.action :submit, label: "Add Scraper"
 
