Make time given match up with the wording

--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -19,12 +19,12 @@
 - elsif @scraper.finished_successfully?
   .alert.alert-success
     Last run completed successfully
-    = time_ago_in_words(@scraper.started_at)
+    = time_ago_in_words(@scraper.finished_at)
     ago
 - elsif @scraper.finished_with_errors?
   .alert.alert-danger
     Last run failed
-    = time_ago_in_words(@scraper.started_at)
+    = time_ago_in_words(@scraper.finished_at)
     ago with status code #{@scraper.status_code}. See any console output below.
 - else
   .alert.alert-info
