--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -7,3 +7,13 @@
   */
 
   body { padding-top: 70px; }
+
+  footer {
+    background-color: #f5f5f5;
+    text-align: center;
+    margin-top: 70px;
+    padding: 30px 0;
+    ul {
+      list-style-type: none;
+    }
+  }
