--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,9 +48,12 @@
           = bootstrap_flash
           = yield
     
-      %footer
+    %footer
+      .container
         %p
-          &copy; OpenAustralia Foundation 2013.
-          %ul
-            %li= link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
-            %li= link_to "Report an issue or suggest a feature", "https://github.com/mlandauer/scraper-platform/issues?state=open" 
+          Made by the
+          = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au"
+          for you
+        %ul
+          %li= link_to "Source code on GitHub", "https://github.com/mlandauer/scraper-platform"
+          %li= link_to "Report an issue or suggest a feature", "https://github.com/mlandauer/scraper-platform/issues?state=open", target: "_blank"
