Add gravatar next to name in layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,9 @@
             %ul.nav.pull-right
               %li
                 - if user_signed_in?
-                  = link_to current_user.name, current_user
+                  = link_to current_user do
+                    = image_tag current_user.gravatar_url(140), width: 20
+                    = current_user.nickname
                 - else
                   = link_to "Sign in with GitHub", user_omniauth_authorize_path(:github)
               %li
