--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -23,8 +23,9 @@
           %li
             %strong
               = link_to scraper.name, scraper
-            &mdash;
-            = scraper.description
+            - unless scraper.description.blank?
+              &mdash;
+              = scraper.description
 
     - if @user == current_user
       = link_to "Add scraper", new_scraper_path, class: "btn"
