Small wording tweak

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -1,6 +1,4 @@
-%h1 Add scraper
-
-%p This is where you will be able to pick a repository from your GitHub to add as a scraper
+%h1 Add scraper from your Github repository
 
 %p
   For the time being scrapers are restricted to using Ruby. They need to have a file in the root
