--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -10,12 +10,16 @@
   .alert.alert-info
     The scraper is <strong>queued to run</strong>. It was queued
     = time_ago_in_words(@scraper.queued_at)
-    ago. (For the time being you will need to refresh this page to update this</quiet>)
+    ago.
+    %span.muted
+      (Refresh page for the latest)
 - elsif @scraper.running?
   .alert.alert-info
     The scraper is <strong>running</strong>. It was started
     = time_ago_in_words(@scraper.started_at)
-    ago. (For the time being you will need to refresh this page to update this</quiet>)
+    ago.
+    %span.muted
+      (Refresh page for the latest)
 - elsif @scraper.finished_successfully?
   .alert.alert-success
     Last run completed successfully
