--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,7 @@
           .container.nav-collapse
             %ul.nav
               %li= link_to "Add scraper", new_scraper_path
+              %li= link_to "Fork scraper from Scraperwiki", new_scraperwiki_fork_path
               %li= link_to "API", api_path
             %ul.nav.pull-right
               %li
