Show when scraper forked from ScraperWiki. Fixes #73

--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -5,6 +5,11 @@
 
 %h4= @scraper.description
 
+- if @scraper.scraperwiki_url
+  %p
+    Forked from
+    = link_to "ScraperWiki", @scraper.scraperwiki_url
+
 - if @scraper.forking?
   %h2 Forking!
   .progress.progress-striped.active
