Convert other bits and pieces to bootstrap3

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -3,12 +3,12 @@
 %p This page will become the landing page for the scraping platform. Yes!
 
 .row
-  .span6
+  .col-md-6
     %h2 All Users
     %ul
       - User.all.each do |user|
         %li= link_to user.name, user
-  .span6
+  .col-md-6
     %h2 All Scrapers
     %ul
       - Scraper.all.each do |scraper|
