--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,8 +31,14 @@
         .collapse.navbar-collapse#bs-example-navbar-collapse-1
           %ul.nav.navbar-nav
             -# TODO set class to "active" when this is the current page
-            %li= link_to "Add scraper", new_scraper_path
-            %li= link_to "Fork scraper from Scraperwiki", new_scraperwiki_fork_path
+            %li(class="dropdown")
+              %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
+                Add Scraper
+                %b(class="caret")
+              %ul(class="dropdown-menu")
+                %li= link_to "Add scraper from GitHub", new_scraper_path
+                %li(class="divider")
+                %li= link_to "Fork scraper from Scraperwiki", new_scraperwiki_fork_path
             %li= link_to "API", api_path
           %ul.nav.navbar-nav.navbar-right
             %li
